a few bugfixes, release automation

--- a/.github/workflows/grapl-release.yml
+++ b/.github/workflows/grapl-release.yml
@@ -116,7 +116,7 @@ jobs:
         run: |
           wget https://github.com/dnephin/dobi/releases/download/v0.13.0/dobi-linux
           chmod +x dobi-linux
-      
+
       - name: Determine release channel
         run: |
           BRANCH=${{ github.event.release.target_commitish }}
@@ -260,7 +260,7 @@ jobs:
       - name: Log in to Docker registry
         run: |
           echo "${{ secrets.DOCKERHUB_TOKEN }}" | docker login --username grapl --password-stdin
-        
+
       - name: Publish Python images to DockerHub
         run: |
           ./etc/build_scripts/push_py_to_docker.sh
@@ -284,6 +284,9 @@ jobs:
 
           cp dist/dgraph-ttl/lambda.zip dgraph-ttl-$TAG.zip
           echo "::set-output name=dgraph-ttl::dgraph-ttl-$TAG.zip"
+
+          cp dist/swarm-lifecycle-event-handler/lambda.zip swarm-lifecycle-event-handler-$TAG.zip
+          echo "::set-output name=swarm-lifecycle-event-handler::swarm-lifecycle-event-handler-$TAG.zip"
 
       - name: Upload analyzer-executor to Github
         uses: actions/upload-release-asset@v1
@@ -334,6 +337,16 @@ jobs:
           upload_url: ${{ github.event.release.upload_url }}
           asset_path: ./${{ steps.extract-python-artifacts.outputs.dgraph-ttl }}
           asset_name: ${{ steps.extract-python-artifacts.outputs.dgraph-ttl }}
+          asset_content_type: application/zip
+
+      - name: Upload swarm-lifecycle-event-handler to Github
+        uses: actions/upload-release-asset@v1
+        env:
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+        with:
+          upload_url: ${{ github.event.release.upload_url }}
+          asset_path: ./${{ steps.extract-python-artifacts.outputs.swarm-lifecycle-event-handler }}
+          asset_name: ${{ steps.extract-python-artifacts.outputs.swarm-lifecycle-event-handler }}
           asset_content_type: application/zip
 
       - name: Clean up dist
@@ -389,7 +402,6 @@ jobs:
       - name: Clean up grapl_analyzerlib dist
         run: |
           rm -rf dist
-      
 
       - name: Prepare grapl-common dist
         run: |
@@ -415,8 +427,6 @@ jobs:
       - name: Clean up grapl-common dist
         run: |
           rm -rf dist
-
-
 
   release-js-services:
     runs-on: ubuntu-latest
