--- a/dobi.yaml
+++ b/dobi.yaml
@@ -481,7 +481,7 @@ job=run-grapl-common-unit-tests:
   command: /bin/bash -c "source venv/bin/activate && cd grapl_common/tests && ls && py.test -n auto -m 'not integration_test'"
 
 
-job=run-engagement-creator-typecheck:
+job=typecheck-engagement-creator:
   use: engagement-creator-build
   command: |
     /bin/bash -c "
@@ -491,7 +491,7 @@ job=run-engagement-creator-typecheck:
       mypy .
       "
 
-job=run-grapl-common-typecheck:
+job=typecheck-grapl-common:
   use: grapl-common-build
   command: |
     /bin/bash -c "
@@ -501,7 +501,7 @@ job=run-grapl-common-typecheck:
       mypy .
       "
 
-job=run-grapl-tests-common-typecheck:
+job=typecheck-grapl-tests-common:
   use: grapl-tests-common-build
   command: |
     /bin/bash -c "
@@ -511,7 +511,7 @@ job=run-grapl-tests-common-typecheck:
       mypy .
       "
 
-job=run-e2e-integration-tests-typecheck:
+job=typecheck-e2e-integration-tests:
   use: grapl-e2e-tests-build
   # since there's no setup.py, I have an explicit `pip install mypy` instead of `.[typecheck]`
   command: |
@@ -521,7 +521,7 @@ job=run-e2e-integration-tests-typecheck:
       mypy -p grapl_e2e_tests
       "
 
-job=run-analyzer-deployer-typecheck:
+job=typecheck-analyzer-deployer:
   use: analyzer-deployer-build
   # since there's no setup.py, I have an explicit `pip install mypy` instead of `.[typecheck]`
   # the `touch` is a hack for mypy until https://github.com/aws/chalice/pull/1500 is in	
@@ -534,7 +534,7 @@ job=run-analyzer-deployer-typecheck:
       mypy .
       "
 
-job=run-model-plugin-deployer-typecheck:
+job=typecheck-model-plugin-deployer:
   use: model-plugin-deployer-build
   # since there's no setup.py, I have an explicit `pip install mypy` instead of `.[typecheck]`
   # the `touch` is a hack for mypy until https://github.com/aws/chalice/pull/1500 is in	
@@ -545,6 +545,15 @@ job=run-model-plugin-deployer-typecheck:
       cd model-plugin-deployer &&
       pip install mypy &&
       mypy .
+      "
+job=typecheck-grapl-analyzerlib:
+  use: grapl-analyzerlib-build
+  command: |
+    /bin/bash -c "
+      source venv/bin/activate &&
+      cd grapl_analyzerlib &&
+      pip install '.[typecheck]' &&
+      pytype --config ./pytype.cfg .
       "
 
 job=run-grapl-analyzerlib-unit-tests:
@@ -853,12 +862,14 @@ alias=integration-tests:
 alias=python-typecheck:
   tasks:
     # TODO: Add more and more here!
-    - run-grapl-common-typecheck
-    - run-grapl-tests-common-typecheck
-    - run-analyzer-deployer-typecheck
-    - run-e2e-integration-tests-typecheck
-    - run-engagement-creator-typecheck
-    - run-model-plugin-deployer-typecheck
+    - typecheck-grapl-common
+    - typecheck-grapl-tests-common
+    - typecheck-analyzer-deployer
+    - typecheck-e2e-integration-tests
+    - typecheck-engagement-creator
+    - typecheck-model-plugin-deployer
     - typecheck-analyzer-executor
+    # Broken, temporarily
+    # - typecheck-grapl-analyzerlib
   annotations:
     description: "Run mypy or pytype type checks on a subset of our Python libs/services"
