--- a/src/python/grapl_analyzerlib/pytype.cfg
+++ b/src/python/grapl_analyzerlib/pytype.cfg
@@ -12,7 +12,7 @@ inputs = grapl_analyzerlib
     .
 
 # Keep going past errors to analyze as many files as possible.
-keep_going = False
+keep_going = True
 
 # Run N jobs in parallel. When 'auto' is used, this will be equivalent to the
 # number of CPUs on the host system.
