--- a/src/python/pyproject.toml
+++ b/src/python/pyproject.toml
@@ -9,11 +9,14 @@ exclude = '''
 )
 '''
 
-# Black-recommended isort settings
 [tool.isort]
+# Black-recommended isort settings
 multi_line_output = 3
 include_trailing_comma = true
 force_grid_wrap = 0
 use_parentheses = true
 ensure_newline_before_comments = true
 line_length = 88
+
+# grapl analyzerlib's import ordering is very very touchy
+skip_glob = ["grapl_analyzerlib/**"]
