--- a/.github/workflows/grapl-lint.yml
+++ b/.github/workflows/grapl-lint.yml
@@ -51,6 +51,27 @@ jobs:
           source .venv/bin/activate
           black --check .
 
+  python-isort:
+    runs-on: ubuntu-latest
+
+    strategy:
+      matrix:
+        python-version: [3.7]
+
+    steps:
+      - uses: actions/checkout@v2
+
+      - name: Set up Python ${{ matrix.python-version }}
+        uses: actions/setup-python@v2
+        with:
+          python-version: ${{ matrix.python-version }}
+
+      - name: Check python isort
+        uses: jamescurtin/isort-action@master
+        with:
+          sortPaths: src/python/
+
+
   check-pypi:
     runs-on: ubuntu-latest
 
