--- a/.github/workflows/grapl-lint.yml
+++ b/.github/workflows/grapl-lint.yml
@@ -44,33 +44,18 @@ jobs:
           python3 -mvenv .venv
           source .venv/bin/activate
           python -mpip install --upgrade pip
-          pip install black mypy pypi-simple
+          pip install black isort
 
       - name: Check python formatting
         run: |
           source .venv/bin/activate
           black --check .
 
-  python-isort:
-    runs-on: ubuntu-latest
-
-    strategy:
-      matrix:
-        python-version: [3.7]
-
-    steps:
-      - uses: actions/checkout@v2
-
-      - name: Set up Python ${{ matrix.python-version }}
-        uses: actions/setup-python@v2
-        with:
-          python-version: ${{ matrix.python-version }}
-
       - name: Check python isort
-        uses: jamescurtin/isort-action@master
-        with:
-          sortPaths: src/python/
-
+        run: |
+          source .venv/bin/activate
+          cd src/python
+          isort .
 
   check-pypi:
     runs-on: ubuntu-latest
