--- a/.github/workflows/grapl-lint.yml
+++ b/.github/workflows/grapl-lint.yml
@@ -44,12 +44,18 @@ jobs:
           python3 -mvenv .venv
           source .venv/bin/activate
           python -mpip install --upgrade pip
-          pip install black mypy pypi-simple
+          pip install black isort
 
       - name: Check python formatting
         run: |
           source .venv/bin/activate
           black --check .
+
+      - name: Check python isort
+        run: |
+          source .venv/bin/activate
+          cd src/python
+          isort --diff --check-only .
 
   check-pypi:
     runs-on: ubuntu-latest
