--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -348,6 +348,7 @@ services:
 
   grapl-engagement-view:
     image: grapl/grapl-engagement-view:${TAG:-latest}
+    command: "serve -dir /var/www"
     environment:
       - PORT=1234
     ports:
@@ -389,6 +390,7 @@ services:
         wait-for-it s3:9000 &&
         wait-for-it dynamodb:8000 &&
         wait-for-it grapl-master-graph-db:8080 &&
+        wait-for-it grapl-engagement-view:1234 &&
         . venv/bin/activate && 
         python /home/grapl/grapl_local_provision/provision_local_identity_table.py &&
         python /home/grapl/grapl_local_provision/grapl_provision.py &&
