--- a/dobi.yaml
+++ b/dobi.yaml
@@ -11,6 +11,14 @@ mount=dist:
   path: /home/grapl/dist
   file: false
 
+# a volume, not a bind-mount
+# dump-compose-artifacts will take care of extracting things from it
+mount=dynamodb_dump:
+  name: dynamodb_dump
+  path: /mnt/dynamodb_dump
+  read-only: false
+  file: false
+
 #
 # images
 #
@@ -623,8 +631,11 @@ job=run-e2e-integration-tests:
     - "IS_LOCAL=True"
     - "MG_ALPHAS=grapl-master-graph-db:9080"
     - DEBUG_SERVICES={env.DEBUG_SERVICES:}
+    - DUMP_ARTIFACTS={env.DUMP_ARTIFACTS:-False}
   depends:
     - integration-env
+  mounts:
+    - dynamodb_dump
   ports:
     # Used for debugger
     - 8400:8400
