--- a/.github/workflows/grapl-build.yml
+++ b/.github/workflows/grapl-build.yml
@@ -113,7 +113,7 @@ jobs:
 
   # In the future, this should probably be merged back into `dobi integration-tests`, but
   # since it's so timing-dependent I'm going to treat it separately until it stabilizes a bit.
-  end-to-end-integration-tests:
+  FLAKY-end-to-end-tests:
     runs-on: ubuntu-latest
 
     strategy:
@@ -138,7 +138,7 @@ jobs:
           GRAPL_RELEASE_TARGET=debug TAG=latest ./dobi-linux --no-bind-mount build
 
       # --no-bind-mount makes dobi screw up with volumes for some reason, and it's not really required here anyway.
-      - name: Run end-to-end integration tests
+      - name: Run end-to-end tests
         run: |
           GRAPL_RELEASE_TARGET=debug \
           GRAPL_LOG_LEVEL=DEBUG \
@@ -150,13 +150,13 @@ jobs:
       - name: 'Collect e2e test artifacts'
         if: ${{ always() }}
         run: |
-          python3 ./etc/ci_scripts/dump_compose_artifacts.py --compose-project "grapl-integration-tests"
+          python3 ./etc/ci_scripts/dump_artifacts.py --compose-project "grapl-integration-tests"
            
       - name: 'Upload e2e test artifacts'
         if: ${{ always() }}
         uses: actions/upload-artifact@v2
         with:
           name: e2e-artifacts
-          # this path is specified in dump_compose_artifacts.py
-          path: /tmp/compose_artifacts/
+          # this path is specified in dump_artifacts.py
+          path: /tmp/dumped_artifacts/
           retention-days: 28
