--- a/.github/workflows/grapl-build.yml
+++ b/.github/workflows/grapl-build.yml
@@ -137,22 +137,26 @@ jobs:
         run: |
           GRAPL_RELEASE_TARGET=debug TAG=latest ./dobi-linux --no-bind-mount build
 
+      # --no-bind-mount makes dobi screw up with volumes for some reason, and it's not really required here anyway.
       - name: Run end-to-end integration tests
         run: |
-          GRAPL_RELEASE_TARGET=debug GRAPL_LOG_LEVEL=DEBUG TAG=latest ./dobi-linux --no-bind-mount run-e2e-integration-tests
+          GRAPL_RELEASE_TARGET=debug \
+          GRAPL_LOG_LEVEL=DEBUG \
+          DUMP_ARTIFACTS=True \
+          TAG=latest \
+          ./dobi-linux run-e2e-integration-tests
        
       # NOTE: This requires >= py37
       - name: 'Collect e2e test artifacts'
         if: ${{ always() }}
         run: |
-          python3 -V &&
           python3 ./etc/ci_scripts/dump_compose_artifacts.py --compose-project "grapl-integration-tests"
            
       - name: 'Upload e2e test artifacts'
         if: ${{ always() }}
         uses: actions/upload-artifact@v2
         with:
-          name: e2e-test-logs
+          name: e2e-artifacts
           # this path is specified in dump_compose_artifacts.py
           path: /tmp/compose_artifacts/
           retention-days: 28
