Use Redis locally (#421)
* moves analyzer-executor uses redis, if available via env var / docker-compose.  this fn'ality flakes in e2e tests.

* Proof-of-concept integration test for analyzer_executor

* do the pythonpath thing

* fix the unit tests, which also perform the imports in the integration tests (even if they don't run the tests)

* fix array index -> get, avoid KeyError

* some rewriting to facilitate integration testing, + integration tests for redis

* re-impl AnalyzerExecutor as class, for sake of integration tests

* force redis cache clear upon docker init for integration tests, & use random data for tests

* move more AnalyzerExecutor static fns to class methods, bugfix up to passing e2e

* remove duplicated line in dobi.yaml

* formatting

* revert debug code

* docstring the redis integration tests

* AnalyzerExecutor should raise an exception unless it's clearly directed to use either NopCache or Redis

* replace faker usage with hypothesis, which we use across other services

* disallow NopCache entirely for AnalyzerExecutor, only Redis

* isort

* actually isort this time

* ok the linters agree now

* rename redis cluster to indicate it's shared & probably temp for dev

* fix lambda fn invocation for AnalyzerExecutor, & fix AE's cmd quotes in dobi.yaml

Co-authored-by: Max Wittek <wimax@graplsecurity.com>
Co-authored-by: wimax-grapl <69007229+wimax-grapl@users.noreply.github.com>

--- a/dobi.yaml
+++ b/dobi.yaml
@@ -629,6 +629,27 @@ job=run-analyzer-deployer-integration-tests:
   depends:
     - integration-env
 
+job=run-analyzer-executor-integration-tests:
+  use: analyzer-executor-build
+  net-mode: grapl-network
+  command: |
+    /bin/bash -c '
+      source venv/bin/activate &&
+      cd analyzer_executor && 
+      export PYTHONPATH="${PYTHONPATH}:$(pwd)/src" &&
+      py.test -n auto -m "integration_test"
+      '
+  env:
+    - HITCACHE_ADDR=dev-shared-redis
+    - HITCACHE_PORT=6379
+    - MESSAGECACHE_ADDR=dev-shared-redis
+    - MESSAGECACHE_PORT=6379
+    - GRAPL_LOG_LEVEL={env.GRAPL_LOG_LEVEL:INFO}
+    - IS_LOCAL=True
+    - IS_RETRY=False
+  depends:
+    - integration-env
+
 job=run-e2e-tests:
   use: grapl-e2e-tests-build
   net-mode: grapl-network
@@ -665,7 +686,16 @@ job=build-analyzer-executor:
 
 job=run-analyzer-executor-unit-tests:
   use: analyzer-executor-build
-  command: /bin/bash -c "source venv/bin/activate && cd analyzer_executor && py.test -n auto -m 'not integration_test'"
+  command: |
+    /bin/bash -c "
+      source venv/bin/activate &&
+      cd analyzer_executor &&
+      export PYTHONPATH="${PYTHONPATH}:$(pwd)/src" &&
+      py.test -n auto -m 'not integration_test'
+    "
+  env:
+    - IS_LOCAL=True
+    - IS_RETRY=False
 
 job=typecheck-analyzer-executor:
   use: analyzer-executor-build
