--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -30,6 +30,20 @@ services:
         # Hitting :8080/admin/export will force an export to be written to this directory.
         target: /dgraph/export
 
+  # dev uses 1 big redis instance, prod has 1:1 redis per grapl service
+  dev-shared-redis:  # maybe transitory, this will eventually match prod
+    image: redis:latest
+    command: |
+      sh -c "
+        # hack from https://stackoverflow.com/questions/54533308/disable-redis-persistence-in-docker
+        # to disable persistence
+        rm -f /data/dump.rdb && redis-server
+      "
+    ports:
+      - "6379:6379" # redis default
+    logging:
+      driver: none
+
   sqs:
     image: localstack/localstack:0.11.5
     environment:
@@ -58,7 +72,6 @@ services:
       - "8099:8099"
     # logging:
     #   driver: none
-
 
   s3:
     image: minio/minio
@@ -252,6 +265,10 @@ services:
     image: grapl/grapl-analyzer-executor:${TAG:-latest}
     command: /bin/sh -c '. venv/bin/activate && python3 analyzer_executor/src/run_local.py'
     environment:
+      - "HITCACHE_ADDR=dev-shared-redis"
+      - "HITCACHE_PORT=6379"
+      - "MESSAGECACHE_ADDR=dev-shared-redis"
+      - "MESSAGECACHE_PORT=6379"
       - "IS_LOCAL=True"
       - GRPC_ENABLE_FORK_SUPPORT=1
       - MG_ALPHAS=master_graph:9080
