add test/, proof-of-concept for Cypress browser-driven integration tests

--- a/dobi.yaml
+++ b/dobi.yaml
@@ -423,6 +423,15 @@ image=etc-build:
   tags:
     - "{env.TAG}"
 
+# utility images
+image=cypress:
+  image: grapl/cypress
+  context: test/cypress
+  dockerfile: Dockerfile
+  target: cypress
+  tags:
+    - "{env.TAG}"
+
 #
 # compose
 #
@@ -459,6 +468,8 @@ compose=integration-env:
     # js images
     - engagement-view
     - graphql-endpoint
+    # utility images
+    - cypress
 
 #
 # jobs -- these are where we build release artifacts
@@ -794,6 +805,13 @@ job=build-swarm-lifecycle-event-handler:
 job=run-engagement-view-unit-tests:
   use: engagement-view-build
   command: /bin/bash -c "CI=true yarn test"
+
+job=run-engagement-view-integration-tests:
+  use: cypress
+  net-mode: grapl-integration-tests_default
+  command: cypress verify && cypress run
+  depends:
+    - integration-env
 
 job=build-graphql-endpoint:
   use: graphql-endpoint-build
