don't record video of Cypress browser tests

--- a/dobi.yaml
+++ b/dobi.yaml
@@ -810,6 +810,8 @@ job=run-engagement-view-integration-tests:
   use: cypress
   net-mode: grapl-network
   command: cypress verify && cypress run
+  env:
+    - CYPRESS_video=false # If this is true, it creates a video file of the browser running the test
   depends:
     - integration-env
 
