--- a/.github/workflows/grapl-lint.yml
+++ b/.github/workflows/grapl-lint.yml
@@ -39,23 +39,14 @@ jobs:
         with:
           python-version: ${{ matrix.python-version }}
 
-      - name: Set up virtualenv
+      - name: Run etc/ci/scripts/py_lint.sh --check-only
         run: |
-          python3 -mvenv .venv
-          source .venv/bin/activate
-          python -mpip install --upgrade pip
-          pip install black isort
+          ./etc/ci_scripts/py_lint.sh --check-only
+      
+      - name: How to fix lint failure
+        if: ${{ failure() }}
+        run: echo "Run etc/ci_scripts/py_lint.sh without the flag. That's it!"
 
-      - name: Check python formatting
-        run: |
-          source .venv/bin/activate
-          black --check .
-
-      - name: Check python isort
-        run: |
-          source .venv/bin/activate
-          cd src/python
-          isort --diff --check-only .
 
   check-pypi:
     runs-on: ubuntu-latest
