fix dgraph issue, ship logs to cloudwatch

--- a/src/js/grapl-cdk/dgraph/docker-compose-dgraph.yml
+++ b/src/js/grapl-cdk/dgraph/docker-compose-dgraph.yml
@@ -39,6 +39,10 @@ services:
       mode: global
     logging:
       driver: awslogs
+      options:
+        awslogs-create-group: "true"
+        awslogs-group: ${AWS_LOGS_GROUP}
+        awslogs-stream: "envoy"
 
   zero:
     image: dgraph/dgraph:v20.07.1
@@ -55,6 +59,10 @@ services:
           - node.hostname == ${AWS01_NAME}
     logging:
       driver: awslogs
+      options:
+        awslogs-create-group: "true"
+        awslogs-group: ${AWS_LOGS_GROUP}
+        awslogs-stream: "zero"
     command: dgraph zero --my=zero:5080 --replicas 3
     depends_on:
       - envoy
@@ -78,6 +86,10 @@ services:
           - node.hostname == ${AWS01_NAME}
     logging:
       driver: awslogs
+      options:
+        awslogs-create-group: "true"
+        awslogs-group: ${AWS_LOGS_GROUP}
+        awslogs-stream: "alpha1"
     command: dgraph alpha --my=alpha1:7081 --lru_mb=2048 --zero=zero:5080 -o 1 --whitelist=10.0.0.0/8
     depends_on:
       - envoy
@@ -102,6 +114,10 @@ services:
           - node.hostname == ${AWS02_NAME}
     logging:
       driver: awslogs
+      options:
+        awslogs-create-group: "true"
+        awslogs-group: ${AWS_LOGS_GROUP}
+        awslogs-stream: "alpha2"
     command: dgraph alpha --my=alpha2:7082 --lru_mb=2048 --zero=zero:5080 -o 2 --whitelist=10.0.0.0/8
     depends_on:
       - envoy
@@ -126,6 +142,10 @@ services:
           - node.hostname == ${AWS03_NAME}
     logging:
       driver: awslogs
+      options:
+        awslogs-create-group: "true"
+        awslogs-group: ${AWS_LOGS_GROUP}
+        awslogs-stream: "alpha3"
     command: dgraph alpha --my=alpha3:7083 --lru_mb=2048 --zero=zero:5080 -o 3 --whitelist=10.0.0.0/8
     depends_on:
       - envoy
