--- a/dobi.yaml
+++ b/dobi.yaml
@@ -278,6 +278,7 @@ image=engagement-edge-build:
     - python-build
     - graph-descriptions-build
     - grapl-analyzerlib-build
+    - grapl-tests-common-build  # This is more 
   tags:
     - latest
 
@@ -288,7 +289,6 @@ image=engagement-edge-test:
   target: engagement-edge-test
   depends:
     - engagement-edge-build
-    - grapl-tests-common-build
   tags:
     - latest
 
