Proof of concept - quicker typechecks
Local cache of test dependencies

Strip test deps out of graph-descriptions

Fix grapl-common

Analyzerlib done, doing analyzer executor

strip out deps from: analyzer executor engagement edge dgraph-ttl model-plugin-deployer

fix one thing

okay, good to go

reorder layers

--- a/src/python/grapl-common/Dockerfile
+++ b/src/python/grapl-common/Dockerfile
@@ -1,4 +1,4 @@
-FROM grapl/grapl-python-build:latest AS grapl-common-python-build
+FROM grapl/grapl-python-build:latest
 USER grapl
 WORKDIR /home/grapl
 COPY --chown=grapl . grapl_common
