--- a/src/js/grapl-cdk/Dockerfile
+++ b/src/js/grapl-cdk/Dockerfile
@@ -18,3 +18,25 @@ RUN npm install
 COPY . .
 # does typechecking, which is nice
 RUN npm run build
+
+FROM grapl/grapl-cdk-build AS grapl-cdk-test
+# Make fake zip files to appease the CDK tests
+WORKDIR /home/grapl/grapl-cdk/zips
+RUN touch \
+  analyzer-dispatcher-latest.zip \
+  analyzer-executor-latest.zip \
+  dgraph-ttl-latest.zip \
+  engagement-creator-latest.zip \
+  engagement-edge-latest.zip \
+  engagement-ux-latest.zip \
+  graph-merger-latest.zip \
+  graphql-endpoint-latest.zip \
+  metric-forwarder-latest.zip \ 
+  model-plugin-deployer-latest.zip \
+  node-identifier-latest.zip \
+  node-identifier-retry-handler-latest.zip \
+  osquery-subgraph-generator-latest.zip \
+  swarm-lifecycle-event-handler-latest.zip \
+  sysmon-subgraph-generator-latest.zip
+
+RUN cd /home/grapl/grapl-cdk && npm run test
