--- a/.github/workflows/grapl-build.yml
+++ b/.github/workflows/grapl-build.yml
@@ -57,6 +57,21 @@ jobs:
         run: |
           GRAPL_RELEASE_TARGET=debug TAG=latest ./dobi-linux --no-bind-mount python-unit-tests
 
+  cdk-build:
+    runs-on: ubuntu-latest
+
+    steps:
+      - uses: actions/checkout@v2
+
+      - name: Prepare Github Actions CI
+        run: |
+          ./etc/ci_scripts/clean_gh_actions_space.sh
+          ./etc/ci_scripts/install_requirements.sh
+
+      - name: Run dobi grapl-cdk-build
+        run: |
+          GRAPL_RELEASE_TARGET=debug TAG=latest ./dobi-linux grapl-cdk-build
+
   python-typecheck:
     runs-on: ubuntu-latest
 
