--- a/src/js/grapl-cdk/Dockerfile
+++ b/src/js/grapl-cdk/Dockerfile
@@ -3,16 +3,18 @@
 # of other services/builds.
 
 FROM node:alpine3.10 AS grapl-cdk-build
-WORKDIR /home/grapl
-COPY . .
-RUN npm install
-RUN npm install --global aws-cdk
-
-# does typechecking, which is nice
-RUN npm run build
-
-# more useful than the Node shell
-RUN apk add bash
-
+WORKDIR /home/grapl/grapl-cdk
 # no-op the base image cmd, so it doesn't launch a Node repl
 CMD :
+RUN apk add bash
+RUN npm install --global aws-cdk
+
+# Grab all dependencies
+COPY ./package.json ./package.json
+COPY ./package-lock.json ./package-lock.json
+RUN npm install
+
+# Copy in the rest of the source
+COPY . .
+# does typechecking, which is nice
+RUN npm run build
