--- a/src/js/graphql_endpoint/package.json
+++ b/src/js/graphql_endpoint/package.json
@@ -15,6 +15,7 @@
     "axios": "^0.19.2",
     "cors": "^2.8.5",
     "dgraph-js": "^20.3.1",
+    "dgraph-js-http": "^20.7.3",
     "express": "^4.17.1",
     "express-graphql": "^0.9.0",
     "graphql": "^15.0.0",
