Issue 433 - rust grapl prelude
Rename to prelude

--- a/src/rust/Cargo.toml
+++ b/src/rust/Cargo.toml
@@ -6,6 +6,7 @@ members = [
     "./graph-descriptions",
     "./graph-merger",
     "./grapl-config",
+    "./grapl-prelude",
     "./grapl-observe",
     "./metric-forwarder",
     "./node-identifier",
